# trezoa-record-service

./: Cargo.toml  codama.ts  codoma.ts  package-lock.json  package.json  pnpm-lock.yaml
program/: Cargo.toml
program/src/: constants.rs  lib.rs  tests.rs  utils.rs
program/src/instructions/: burn_tokenized_record.rs  create_class.rs  create_record.rs  delete_record.rs  freeze_class.rs  freeze_record.rs  freeze_tokenized_record.rs  mint_tokenized_record.rs  mod.rs  update_class.rs  update_record.rs
program/src/state/: class.rs  record.rs
program/src/token2022/: burn_checked.rs  close_account.rs  constants.rs  freeze_account.rs  initialize_group.rs  initialize_member.rs  initialize_metadata.rs  initialize_metadata_pointer.rs  initialize_mint_close_authority.rs  initialize_permanent_delegate.rs  mint_to_checked.rs  mod.rs  state.rs  thaw_account.rs  transfer_checked.rs  update_metadata.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/src/client/: mod.rs  programs.rs  shared.rs
sdk/rust/src/client/accounts/: class.rs  mod.rs  record.rs
sdk/rust/src/client/errors/: mod.rs
sdk/rust/src/client/instructions/: burn_tokenized_record.rs  create_class.rs  create_record.rs  create_record_tokenizable.rs  delete_record.rs  freeze_class.rs  freeze_record.rs  freeze_tokenized_record.rs  mint_tokenized_record.rs  mod.rs  transfer_record.rs  transfer_tokenized_record.rs  update_class_authority.rs  update_class_metadata.rs  update_record.rs  update_record_expiry.rs  update_record_tokenizable.rs
sdk/rust/src/client/types/: additional_metadata.rs  metadata.rs  mod.rs
(+32 files in other folders)
