[package]
name = "trezoa-record-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["perf"]
perf = []

[dependencies]
pinocchio = "0.8.3"
pinocchio-system = "0.2.3"
pinocchio-associated-token-account = "0.1.1"

[dev-dependencies]
trezoa-record-service-client = { workspace = true }
mollusk-svm = "0.4.0"
mollusk-svm-programs-token = "0.4.0"
tpl-token-2022 = "8.0.1"
trezoa-precompiles = "2.2.2"
trezoa-account = "2.2.1"
trezoa-pubkey = "2.2.1"
trezoa-feature-set = "2.2.1"
trezoa-program = "2.2.1"
kaigan = ">=0.2.6"
borsh = "^0.10"
hex = "0.4.3"