[package]
name = "trezoa-record-service-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Trezoa Record Service"
license = "MIT"
repository = "https://github.com/trzledgerfoundation/trezoa-record-service"

[lib]
name = "trezoa_record_service_client"

[dependencies]
kaigan = ">=0.2.6"
borsh = "^0.10"
trezoa-program = "2.3.0"
trezoa-instruction = "2.3.0"
trezoa-pubkey = "2.3.0"
trezoa-account-info = "2.3.0"
trezoa-program-entrypoint = "2.3.0"
trezoa-cpi = "2.2.1"